--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,14 @@
+.text-parent {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 2px;
+  font-family: 'Caveat', cursive;
+}
+
+.child:hover {
+  color: powderblue;
+}
+
 html {
   padding: 0;
   margin: 0;
@@ -9,6 +20,16 @@ html {
 .holiday-parent {
   width: 65rem;
   height: 45rem;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .holiday-gallery {
@@ -19,5 +40,36 @@ html {
 .holiday {
   height: 20rem;
   position: absolute;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.diwali {
+  top: 15rem;
+  left: 15%;
+}
+
+.christmas {
+  top: 3rem;
+  right: 0;
+}
+
+.china {
+  top: -5rem;
+  left: 1rem;
+}
+
+.holiday:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  outline: 1rem solid paleturquoise;
+  z-index: 2;
+  outline-offset: 1rem;
+}
+
+.holiday-gallery:hover .holiday:not(:hover) {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+  opacity: 0.5;
 }
 /*# sourceMappingURL=style.css.map */
