--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,5 @@
+@import "./effect1";
+
 html{
     padding: 0;
     margin: 0;
@@ -8,14 +10,48 @@ html{
 .holiday-parent{
     width: 65rem;
     height: 45rem;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .holiday-gallery{
     position: relative;  
-    margin: 2rem;  
+    margin: 2rem;      
 }
 
 .holiday{
     height: 20rem;
     position: absolute;
+    transition: all 0.3s;
+    
+}
+
+.diwali{
+    top: 15rem;
+    left: 15%;
+}
+
+.christmas{
+    top: 3rem;
+    right: 0;
+}
+
+.china{
+    top: -5rem;
+    left: 1rem;
+}
+
+.holiday:hover{
+    transform: scale(1.3);
+    outline: 1rem solid paleturquoise;
+    z-index: 2;
+    outline-offset: 1rem;
+}
+
+.holiday-gallery:hover .holiday:not(:hover){
+    transform: scale(0.8);
+    opacity: 0.5;
 }
