--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,77 @@
   text-transform: uppercase;
   margin: 2px;
   font-family: 'Caveat', cursive;
+  font-size: 4rem;
 }
 
-.child:hover {
-  color: powderblue;
+.text-child:hover {
+  background-color: cadetblue;
+}
+
+.text-child:hover + .text-grow {
+  background-color: powderblue;
+  display: block;
+}
+
+.text-grow {
+  padding: 15px;
+  display: none;
+  font-size: 2rem;
+}
+
+.build-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  position: relative;
+  width: 50%;
+}
+
+.build-image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.build-middle {
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.build-parent:hover .build-image {
+  opacity: 0.3;
+}
+
+.build-parent:hover .build-middle {
+  opacity: 1;
+}
+
+.build-text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 html {
