--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,6 @@
 @import "./effect1";
-@import "./effect2";
-
+@import"./_effect2.scss";
+@import"./_effect.3.scss";
 html{
     padding: 0;
     margin: 0;
