--- a/style/style.css
+++ b/style/style.css
@@ -22,19 +22,9 @@
 }
 
 .build-parent {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
   position: relative;
   width: 50%;
+  left: 25%;
 }
 
 .build-image {
@@ -70,10 +60,37 @@
 }
 
 .build-text {
-  background-color: #4CAF50;
+  background-color: #FFAB40;
   color: white;
   font-size: 16px;
   padding: 16px 32px;
+  font-family: 'Pacifico', cursive;
+}
+
+.button-child {
+  padding: 15px 25px;
+  font-size: 24px;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background-color: #B3E5FC;
+  border: none;
+  border-radius: 15px;
+  -webkit-box-shadow: 0 9px #999;
+          box-shadow: 0 9px #999;
+}
+
+.button-child:hover {
+  background-color: #80D8FF;
+}
+
+.button-child:active {
+  background-color: #80D8FF;
+  -webkit-box-shadow: 0 5px #666;
+          box-shadow: 0 5px #666;
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
 }
 
 html {
