--- a/style/style.scss
+++ b/style/style.scss
@@ -1,6 +1,7 @@
 @import "./effect1";
 @import"./_effect2.scss";
 @import"./_effect.3.scss";
+@import"./_effect4.scss";
 html{
     padding: 0;
     margin: 0;
