--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Oswald");
 .text-parent {
   text-align: center;
   text-transform: uppercase;
@@ -67,6 +68,19 @@
   font-family: 'Pacifico', cursive;
 }
 
+.button-parent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 2rem;
+}
+
 .button-child {
   padding: 15px 25px;
   font-size: 24px;
@@ -91,6 +105,68 @@
           box-shadow: 0 5px #666;
   -webkit-transform: translateY(4px);
           transform: translateY(4px);
+}
+
+#circle-container {
+  margin: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: lightblue;
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
+.circle {
+  width: 50vh;
+  height: 50vh;
+  position: absolute;
+  border-radius: 50%;
+}
+
+#one:before {
+  content: "Hover Me!";
+}
+
+#one {
+  background-color: rgba(0, 0, 225, 0.45);
+  font-size: 40px;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 1.5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: white;
+  font-weight: bold;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+#two {
+  background-color: green;
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0.5;
+}
+
+#three {
+  background-color: red;
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0.5;
 }
 
 html {
