--- a/style/style.scss
+++ b/style/style.scss
@@ -1,7 +1,9 @@
 @import "./effect1";
 @import"./_effect2.scss";
-@import"./_effect.3.scss";
+@import"./_effect3.scss";
 @import"./_effect4.scss";
+@import"./_effect5.scss";
+
 html{
     padding: 0;
     margin: 0;
