--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: lightblue;
   height: 100vh;
   width: 100vw;
   position: relative;
@@ -129,10 +128,6 @@
   height: 50vh;
   position: absolute;
   border-radius: 50%;
-}
-
-#one:before {
-  content: "Hover Me!";
 }
 
 #one {
@@ -167,6 +162,77 @@
   -webkit-transition: 1s;
   transition: 1s;
   opacity: 0.5;
+}
+
+#four {
+  background-color: orange;
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0.5;
+}
+
+#five {
+  background-color: lightgreen;
+  -webkit-transition: 1s;
+  transition: 1s;
+  opacity: 0.5;
+}
+
+#cc {
+  position: relative;
+  width: 50vh;
+  height: 50vh;
+  border-radius: 50%;
+}
+
+#cc:hover #two {
+  -webkit-transform: translate(0px, 75px);
+          transform: translate(0px, 75px);
+}
+
+#cc:hover #three {
+  -webkit-transform: translate(0px, -75px);
+          transform: translate(0px, -75px);
+}
+
+#cc:hover #four {
+  -webkit-transform: translate(75px, 0px);
+          transform: translate(75px, 0px);
+}
+
+#cc:hover #five {
+  -webkit-transform: translate(-75px, 0px);
+          transform: translate(-75px, 0px);
+}
+
+.label-parent {
+  height: 30vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.label {
+  font-size: 30px;
+  margin: 2px;
+}
+
+#label1 {
+  background-color: lightblue;
+  width: 30vh;
+  height: 6vh;
+}
+
+#label2 {
+  background-color: lightcoral;
+  width: 30vh;
+  height: 6vh;
 }
 
 html {
