--- a/style/style.css
+++ b/style/style.css
@@ -227,12 +227,24 @@
   background-color: lightblue;
   width: 30vh;
   height: 6vh;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 #label2 {
   background-color: lightcoral;
   width: 30vh;
   height: 6vh;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+#label1:hover {
+  background-color: white;
+}
+
+#label2:hover {
+  background-color: white;
 }
 
 html {
