--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
 @import"./_effect3.scss";
 @import"./_effect4.scss";
 @import"./_effect5.scss";
+@import"./_animation1.scss";
 
 html{
     padding: 0;
